--- a/win-prog-course-exp/MainWindow.xaml
+++ b/win-prog-course-exp/MainWindow.xaml
@@ -45,14 +45,15 @@
                             <RowDefinition Height="*" />
                         </Grid.RowDefinitions>
                         <Grid Grid.Row="0" Grid.Column="0">
-                            <TreeView HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="5,5,5,5">
-                                <TreeViewItem Header="Computer" IsExpanded="True">
-                                    <TreeViewItem Header="HKEY_CLASSES_ROOT" IsExpanded="False"></TreeViewItem>
-                                    <TreeViewItem Header="HKEY_CURRENT_USER" IsExpanded="False"></TreeViewItem>
-                                    <TreeViewItem Header="HKEY_LOCAL_MACHINE" IsExpanded="False"></TreeViewItem>
-                                    <TreeViewItem Header="HKEY_USERS" IsExpanded="False"></TreeViewItem>
-                                    <TreeViewItem Header="HKEY_CURRENT_CONFIG" IsExpanded="False"></TreeViewItem>
-                                </TreeViewItem>
+                            <TreeView Name="treeView" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="5,5,5,5">
+                                <TreeView.ItemTemplate>
+                                    <HierarchicalDataTemplate DataType="x:Type local:TreeViewItem" ItemsSource="{Binding Items}">
+                                        <StackPanel Orientation="Horizontal">
+                                            <Image Width="22" Height="22" Margin="0,0,5,-5" Source="{Binding Icon}" />
+                                            <TextBlock FontSize="22" Text="{Binding Title}" />
+                                        </StackPanel>
+                                    </HierarchicalDataTemplate>
+                                </TreeView.ItemTemplate>
                             </TreeView>
                         </Grid>
                     </Grid>
