--- a/win-prog-course-exp/MainWindow.xaml
+++ b/win-prog-course-exp/MainWindow.xaml
@@ -46,7 +46,18 @@
                                 </Style>
                             </Button.Style>
                             <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
-                                <Image Width="12" Height="12" Margin="0,0,5,0" Source="{Binding Icon}" />
+                                <Image Width="12" Height="12" Margin="0,0,5,0">
+                                    <Image.Style>
+                                        <Style TargetType="Image">
+                                            <Setter Property="Source" Value="Resources/icon/chapter.png" />
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding IsOn}" Value="True">
+                                                    <Setter Property="Source" Value="Resources/icon/chapter-open.png" />
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </Image.Style>
+                                </Image>
                                 <TextBlock FontSize="12" Text="{Binding Title}" />
                             </StackPanel>
                         </Button>
