--- a/win-prog-course-exp/MainWindow.xaml
+++ b/win-prog-course-exp/MainWindow.xaml
@@ -19,51 +19,7 @@
             <Label Content="实验列表" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="#D4FFE2"/>
         </Grid>
         <Grid Grid.Row="1" Grid.Column="0">
-            <ItemsControl Name="chapterBtnsControl" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <Button BorderThickness="0" Command="{Binding OnClickCmd}" CommandParameter="{Binding RelativeSource={RelativeSource Self}}">
-                            <Button.Style>
-                                <Style TargetType="{x:Type Button}">
-                                    <Setter Property="Background" Value="White" />
-                                    <Setter Property="Template">
-                                        <Setter.Value>
-                                            <ControlTemplate TargetType="{x:Type Button}">
-                                                <Border Background="{TemplateBinding Background}">
-                                                    <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
-                                                </Border>
-                                            </ControlTemplate>
-                                        </Setter.Value>
-                                    </Setter>
-                                    <Style.Triggers>
-                                        <DataTrigger Binding="{Binding IsOn}" Value="True">
-                                            <Setter Property="Background" Value="#EAFFE0" />
-                                        </DataTrigger>
-                                        <Trigger Property="IsMouseOver" Value="True">
-                                            <Setter Property="Background" Value="#EAFFE0" />
-                                        </Trigger>
-                                    </Style.Triggers>
-                                </Style>
-                            </Button.Style>
-                            <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
-                                <Image Width="12" Height="12" Margin="0,0,5,0">
-                                    <Image.Style>
-                                        <Style TargetType="Image">
-                                            <Setter Property="Source" Value="Resources/icon/chapter.png" />
-                                            <Style.Triggers>
-                                                <DataTrigger Binding="{Binding IsOn}" Value="True">
-                                                    <Setter Property="Source" Value="Resources/icon/chapter-open.png" />
-                                                </DataTrigger>
-                                            </Style.Triggers>
-                                        </Style>
-                                    </Image.Style>
-                                </Image>
-                                <TextBlock FontSize="12" Text="{Binding Title}" />
-                            </StackPanel>
-                        </Button>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
+            <local:ChapterSideSelector />
         </Grid>
         <Grid Grid.Row="0" Grid.Column="1" Grid.RowSpan="2">
             <TabControl HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
