--- a/win-prog-course-exp/MainWindow.xaml
+++ b/win-prog-course-exp/MainWindow.xaml
@@ -97,11 +97,11 @@
                                             <StackPanel.ContextMenu>
                                                 <ContextMenu>
                                                     <MenuItem Header="New">
-                                                        <MenuItem Header="Folder" />
+                                                        <MenuItem Header="Folder" Click="FileTreeItemCtxMenu_New_Folder_Click" />
                                                         <Separator />
-                                                        <MenuItem Header="File" />
+                                                        <MenuItem Header="File" Click="FileTreeItemCtxMenu_New_File_Click" />
                                                     </MenuItem>
-                                                    <MenuItem Header="Delete" />
+                                                    <MenuItem Header="Delete" Click="FileTreeItemCtxMenu_Delete_Click" />
                                                 </ContextMenu>
                                             </StackPanel.ContextMenu>
                                             <Image Width="22" Height="22" Margin="0,0,5,-5">
