--- a/win-prog-course-exp/NewKeyDlg.xaml
+++ b/win-prog-course-exp/NewKeyDlg.xaml
@@ -16,7 +16,7 @@
         </Grid.RowDefinitions>
         <Grid Grid.Row="0" Grid.Column="0">
             <StackPanel Orientation="Vertical" VerticalAlignment="Center">
-                <TextBlock Text="Please enter a new key name:" HorizontalAlignment="Center" Margin="0,0,0,7.5" />
+                <TextBlock Name="Prompt" Text="Please enter a new key name:" HorizontalAlignment="Center" Margin="0,0,0,7.5" />
                 <TextBox Name="InputName" TextAlignment="Center" MaxLength="16" MaxLines="1" Width="150"/>
             </StackPanel>
         </Grid>
