add expl image for exp1

--- a/win-prog-course-exp/ChapterContent1.xaml
+++ b/win-prog-course-exp/ChapterContent1.xaml
@@ -8,6 +8,9 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <TabControl HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <TabItem Header="实验说明">
+            <Image Source="/Resources/exp1.png" />
+        </TabItem>
         <TabItem Header="注册表操作">
             <Grid>
                 <Grid.ColumnDefinitions>
